# mock-graph-data-generator-streamlit

./: .gitignore  Dockerfile  Pipfile  README.md  app.yaml  environment.yml  pyproject.toml  requirements.txt  sample_optional_secrets.toml  setup.py
graph_data_generator_streamlit/: app.py  big_app.py
graph_data_generator_streamlit/managers/: n4j.py  n4j_manager.py
graph_data_generator_streamlit/samples/: arrows_dictionary_for_base64.json  minimal.json
graph_data_generator_streamlit/tabs/: data_importer_tab.py  design_tab.py  generate_tab.py  instructions_tab.py
graph_data_generator_streamlit/ui/: config_ui.py  data_importer_ui.py  design_ui.py  export_ui.py  generate_ui.py  ideate_ui.py  instructions_ui.py  samples_ui.py
mock_generators/: __init__.py  app.py  config.py  constants.py  default_generators.json  file_utils.py  generate.py  generate_mapping.py  generators.json  list_utils.py  named_generators.json  new_generator.py  sample_runner.py  template_selector.py  xgenerators.json  🏠_Overview.py
mock_generators/base_generators/: README.md  bool_generator.py  datetime_generator.py  float_generator.py  int_generator.py  string_generator.py
mock_generators/datasets/: README.md  graph_technologies.csv  software_technologies.csv  stack_network_nodes.csv  tech_companies.csv  tech_companies.json  top_graph_companies.csv
mock_generators/generators/: 05711cac.py  05add148.py  111d38e0.py  338d576e.py  469b37c7.py  4b0db60a.py  57f2df99.py  58e9ddbb.py  5929c11b.py  5bf1fbd6.py  5e30c30b.py  73853311.py  78bc0765.py  README.md  ab64469b.py  address_usa.py  c9a071b5.py  city.py  country.py  d1ebdc1a.py  date.py  df2bbd43.py  e0eb78b0.py  e56d87a3.py  e8cff8c1.py  ecdff22c.py  exhaustive_random.py  float.py  image_url.py  int.py  int_from_list.py  int_range.py  literal.py  lorem_words.py  loremtext_sentence.py  postcode.py  pure_random.py  short_uuid.py  state.py  street.py  (+3 more)
mock_generators/imports/: README.md  blank.json  sample.json  simple_org_chart.json
mock_generators/logic/: agraph_conversions.py  (+8 more)
tests/: README.md  test_agraph_conversions.py  test_design_tab.py  test_generate_mappings.py  test_generate_values.py  test_generators.py
(+72 files in other folders)
