[tool.poetry]
name = "mock-graph-data-generator-streamlit"
version = "0.7.1"
description = ""
authors = ["Jason Koo <jalakoo@gmail.com>"]
readme = "README.md"
packages = [{include = "graph_data_generator_streamlit"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = ">=1.27,<2.0"
neo4j-uploader = { git = "https://github.com/jalakoo/neo4j-uploader.git", branch="dev"}
pyclip = ">=0.7,<1.0"
neo4j = "^5.14.1"
streamlit-agraph = "^0.0.45"
openai = "^0.28.1"
pyarrow = ">=14.0.1"
graph-data-generator = { git = "https://github.com/jalakoo/graph-data-generator.git", branch="dev"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
